--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,4 +56,14 @@
         android:layout_below="@+id/button"
         android:text="Stop"
         android:onClick="stopButton"/>
+
+    <Button
+        android:id="@+id/buttonGoToSettings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:text="Settings"
+        android:onClick="goToSettings"/>
 </RelativeLayout>
