--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,14 @@
         android:id="@+id/timeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="98dp"
+        android:textSize="30dp"
+        android:text="25"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp"
-        android:textSize="30dp"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="121dp"
+        android:layout_marginStart="121dp" />
 
     <Button
         android:id="@+id/button"
@@ -45,4 +49,25 @@
         android:layout_alignParentRight="true"
         android:text="Settings"
         android:onClick="goToSettings"/>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button"
+        android:layout_toEndOf="@+id/timeText"
+        android:layout_toRightOf="@+id/timeText"
+        android:text=":"
+        android:textSize="30dp"/>
+
+    <TextView
+        android:id="@+id/textMinutes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button"
+        android:layout_toEndOf="@+id/textView4"
+        android:layout_toRightOf="@+id/textView4"
+        android:text="00"
+        android:textSize="30dp"/>
+
 </RelativeLayout>
