--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context="com.example.rob.pomodoro.MainActivity"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp"
+    android:background="@color/colorMain"
     >
 
     <TextView
@@ -17,42 +18,34 @@
         android:layout_marginTop="98dp"
         android:textSize="30dp"
         android:text="25"
+        android:textColor="@color/blackColor"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="121dp"
         android:layout_marginStart="121dp" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="start"
+        app:srcCompat="@drawable/startpomodorodwa"
+        android:background="@android:color/transparent"
         android:layout_below="@+id/timeText"
-        android:layout_alignLeft="@+id/timeText"
-        android:layout_alignStart="@+id/timeText"
-        android:onClick="bStart"/>
+        android:layout_toLeftOf="@+id/textView4"
+        android:layout_toStartOf="@+id/textView4" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button"
-        android:layout_alignStart="@+id/button"
-        android:layout_below="@+id/button"
-        android:text="Stop"
-        android:onClick="bStop"
-        />
+        app:srcCompat="@drawable/stoppomodorodwa"
+        android:background="@android:color/transparent"
 
-    <Button
-        android:id="@+id/buttonGoToSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:text="Settings"
-        android:onClick="goToSettings"/>
+        android:layout_below="@+id/textMinutes"
+        android:layout_toRightOf="@+id/button"
+        android:layout_toEndOf="@+id/button" />
+
 
     <TextView
         android:id="@+id/textView4"
@@ -62,6 +55,7 @@
         android:layout_toEndOf="@+id/timeText"
         android:layout_toRightOf="@+id/timeText"
         android:text=":"
+        android:textColor="@color/blackColor"
         android:textSize="30dp"/>
 
     <TextView
@@ -72,6 +66,30 @@
         android:layout_toEndOf="@+id/textView4"
         android:layout_toRightOf="@+id/textView4"
         android:text="00"
+        android:textColor="@color/blackColor"
         android:textSize="30dp"/>
+
+    <ImageButton
+        android:id="@+id/imageButton6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        app:srcCompat="@drawable/settingspomodorobig"
+        android:onClick="goToSettings"
+        android:background="@android:color/transparent"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/littlepomidorbig"
+        android:layout_marginRight="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_below="@+id/button2"
+        android:layout_toLeftOf="@+id/imageButton6"
+        android:layout_toStartOf="@+id/imageButton6" />
+
 
 </RelativeLayout>
