--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ac4f37</color>
+    <color name="colorPrimaryDark">#7b3928</color>
+    <color name="colorAccent">#333333</color>
     <color name="colorMain">#C5644B</color>
     <color name="colorShort">#4B9EC5</color>
     <color name="colorLong">#4BC59E</color>
