--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,8 +54,7 @@
         android:text=":"
         android:textColor="@color/blackColor"
         android:textSize="36sp"
-        android:layout_alignBaseline="@+id/textMinutes"
-        android:layout_alignBottom="@+id/textMinutes"
+        android:layout_above="@+id/button"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -66,7 +65,8 @@
         android:text="00"
         android:textColor="@color/blackColor"
         android:textSize="36sp"
-        android:layout_above="@+id/button2"
+        android:layout_alignBaseline="@+id/textView4"
+        android:layout_alignBottom="@+id/textView4"
         android:layout_toRightOf="@+id/textView4"
         android:layout_toEndOf="@+id/textView4" />
 
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/littlepomidorbig"
-        android:layout_above="@+id/imageButton6"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
 
